kubernetes/catalog/radarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/radarr.xml
# Category: MediaServer-Video, Downloaders
# Stars: 1790 | Downloads: 2357733813
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      annotations:
        infraweaver.io/rebalance-memory: "true"
      labels:
        app.kubernetes.io/name: radarr
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr
          ports:
            - containerPort: 7878
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 7878
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 7878
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: radarr-data-0
              mountPath: "/config"
            - name: tmp-movies
              mountPath: "/movies"
            - name: tmp-downloads
              mountPath: "/downloads"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: radarr-data-0
        persistentVolumeClaim:
          claimName: radarr-data-0
      - name: tmp-movies
        emptyDir:
      - name: tmp-downloads
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: webui
  type: ClusterIP
